<resources>
    <string name="app_name">rwc</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="auth_title">Добро пожаловать</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Пароль</string>
    <string name="login_button">Войти</string>
    <string name="register_button">Зарегистрироваться</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="or_continue_with">Или продолжить с помощью</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="open_maps"><u>Открыть карты</u></string>
</resources>